RESOLVED FIXED216976
[LFC][Out-of-flow] ASSERTION FAILED: !layoutBox.isOutOfFlowPositioned() in WebCore::Layout::FormattingContext::Geometry::computedHeightValue
https://bugs.webkit.org/show_bug.cgi?id=216976
Summary [LFC][Out-of-flow] ASSERTION FAILED: !layoutBox.isOutOfFlowPositioned() in We...
alan
Reported 2020-09-25 08:25:59 PDT
ssia
Attachments
Patch (6.75 KB, patch)
2020-09-25 08:31 PDT, alan
no flags
alan
Comment 1 2020-09-25 08:31:31 PDT
Antti Koivisto
Comment 2 2020-09-25 08:33:05 PDT
Comment on attachment 409697 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=409697&action=review > Source/WebCore/layout/FormattingContextGeometry.cpp:-1177 > - // FIXME: Find out if min/max-height properties should also be taken into account here. I guess we found out!
alan
Comment 3 2020-09-25 08:39:51 PDT
(In reply to Antti Koivisto from comment #2) > Comment on attachment 409697 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=409697&action=review > > > Source/WebCore/layout/FormattingContextGeometry.cpp:-1177 > > - // FIXME: Find out if min/max-height properties should also be taken into account here. > > I guess we found out! Most certainly we did!
EWS
Comment 4 2020-09-25 09:05:48 PDT
Committed r267572: <https://trac.webkit.org/changeset/267572> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409697 [details].
Radar WebKit Bug Importer
Comment 5 2020-09-25 09:06:18 PDT
Note You need to log in before you can comment on or make changes to this bug.