[LFC][Out-of-flow] ASSERTION FAILED: !layoutBox.isOutOfFlowPositioned() in WebCore::Layout::FormattingContext::Geometry::computedHeightValue https://bugs.webkit.org/show_bug.cgi?id=216976

Reviewed by Antti Koivisto.

Source/WebCore:

Geometry::computedHeightValue is a simple resolver function. It should not really care about
whether the box's containing block has valid vertical geometry. The callsite (where this assert is important) is already testing this condition.

Test: fast/layoutformattingcontext/out-of-flow-with-non-fixed-height-simple.html

* layout/FormattingContext.h:
* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::FormattingContext::Geometry::computedHeightValue const):
(WebCore::Layout::FormattingContext::Geometry::constraintsForInFlowContent):
* layout/blockformatting/BlockFormattingContext.cpp:
(WebCore::Layout::BlockFormattingContext::layoutInFlowContent):

LayoutTests:

* fast/layoutformattingcontext/out-of-flow-with-non-fixed-height-simple-expected.html: Added.
* fast/layoutformattingcontext/out-of-flow-with-non-fixed-height-simple.html: Added.


Canonical link: https://commits.webkit.org/229751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267572 268f45cc-cd09-0410-ab3c-d52691b4dbfc