Source/WebCore/layout/blockformatting/BlockFormattingContext.cpp
@@ -147,7 +147,7 @@ void BlockFormattingContext::layoutInFlowContent(InvalidationState& invalidation
 
             auto establishesFormattingContext = layoutBox.establishesFormattingContext(); 
             if (establishesFormattingContext) {
-                // Now that we computed the root's height, we can layout the out-of-flow descendants.
+                // Now that we computed the box's height, we can layout the out-of-flow descendants.
                 if (is<ContainerBox>(layoutBox) && downcast<ContainerBox>(layoutBox).hasChild()) {
                     auto& containerBox = downcast<ContainerBox>(layoutBox);
                     LayoutContext::createFormattingContext(containerBox, layoutState())->layoutOutOfFlowContent(invalidationState, geometry().constraintsForOutOfFlowContent(containerBox));
